# Trading-BackTester-in-C-

./: AppBase.cpp  AppBase.h  BookUpdate.cpp  BookUpdate.h  CMakeLists.txt  MDReader.cpp  MDReader.h  MarketSimulator.cpp  MarketSimulator.h  MyOrderBook.cpp  MyOrderBook.h  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  PriceUpdate.cpp  PriceUpdate.h  main.cpp
